data/all_generated_tests/raw_wast_tests/loop_StackCorruption_335.wast
;; 6. **Test 6**:    - **Description**: Add a loop that involves complex arithmetic operations with intermediate results stored on the stack.    - **Constraint**: Correct preservation and restoration of intermediate results.    - **Stack Corruption Check**: Ensure each instruction within the loop maintains stack integrity for the arithmetic operations.

(assert_invalid
  (module
    (func (result i32)
      (i32.const 1) (i32.const 2) (i32.add)
      (loop (param i32 i32) (result i32)
        (i32.mul) (br 0)
      )
    )
  )
  "type mismatch"
)